# PersonalFinancialAnalyst

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  idea.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_source_bank_and_transaction_type_.py  002_create_statements_table.py  003_create_transactions_table_with_indexes.py  004_add_unique_constraint_on_transactions.py  005_create_sessions_table.py
backend/: Dockerfile  pyproject.toml
backend/pfa/: __init__.py  agent_tools.py  anomalies.py  anomalies_api.py  auth.py  auth_api.py  budget_api.py  budget_math.py  budget_service.py  categorization.py  categorization_api.py  chat_agent.py  chat_api.py  csv_parse.py  dashboard_api.py  db.py  dedupe.py  ingest.py  ingest_jobs.py  job_api.py  llm_category_suggest.py  main.py  pdf_cc.py  recurring.py  recurring_api.py  schema.sql  setup_api.py  setup_service.py  statements_api.py  storage.py  trace_invoke.py  transactions_api.py
backend/tests/: conftest.py  test_agent_tools_sql.py  test_anomalies.py  test_auth_http.py  test_budget_http.py  test_budget_math.py  test_categorization.py  test_categorization_http.py  test_chat.py  test_csv_parse.py  test_dashboard_http.py  test_dedupe.py  test_file_storage.py  test_ingest_category_resolution.py  test_ingest_http.py  test_ingest_normalize.py  test_job_http.py  test_llm_category_suggest.py  test_main.py  test_pdf_cc.py  test_pdf_ingest_http.py  test_recurring.py  test_recurring_http.py  test_setup_http.py  test_statement_lifecycle.py  test_trace_invoke.py  test_transactions_http.py
context/impl/: impl-infra.md  impl-observability.md  impl-overview.md  impl-storage.md  impl-ui.md  loop-log.md
context/kits/: cavekit-overview.md  kit-analytics.md  kit-auth.md  kit-infra.md  kit-ingestion.md  kit-mcp.md  kit-observability.md  kit-storage.md  kit-ui.md
context/plans/: build-site.md  plan-overview.md
docs/: PRD.md
docs/superpowers/plans/: 2026-05-02-rewrite-frontend.md  (+3 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: AnomaliesPage.tsx  App.css  App.test.tsx  App.tsx  AuthContext.tsx  BudgetPage.tsx  CLAUDE.md  ChatPage.tsx  DashboardPage.tsx  DevBanner.tsx  Layout.tsx  RecurringPage.test.tsx  RecurringPage.tsx  SetupPage.tsx  StatementsPage.test.tsx  StatementsPage.tsx  TransactionDetailPage.tsx  TransactionsPage.tsx  api.ts  index.css
scripts/: verify-infra.sh
src/financial_assistant/: CLAUDE.md  __init__.py  analytics.py  api.py  auth.py  auth_middleware.py  claude_client.py  config.py  context_formatter.py  db.py  logging_config.py  main.py  mcp_server.py  middleware.py  models.py  normalization.py  parsers.py  queries.py  rate_limit.py  tracing.py  upload.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_ingestion.py  test_mcp_tools.py  test_queries.py  test_rate_limit.py  test_storage_schema.py
(+34 files in other folders)
